--- a/src/components/feedpage.css
+++ b/src/components/feedpage.css
@@ -1,63 +1,82 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    background-color: white;
-  }
-  
-  body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-    line-height: 1.5;
-    color: #333;
-    
-  }
-   .app {
-    display: flex;
-    height: 100vh;
-    position: relative;
-    overflow: hidden;
-  }
+.feed-container {
+  text-align: center;
+  font-family: Arial, sans-serif;
+  margin: auto auto;
+  padding: 20px;
+  max-width: 500px;
+}
 
-  .Title{
-    border: 2px solid #0084ff;
-    background-color: #0084ff;
-    color: white;
-    height: 50px;
-    text-align: center;
-    font-size: 2rem;
-    font-weight: bold;
-    position: sticky;
-    top: 0;               /* Position at the very top */
-    z-index: 1000; 
-  }
-  .post-creation{
-    padding-left: 10px;
-    padding-right: 10px;
-    border: 2px solid #0084ff ;
-    border-radius: 20px;
-    width: 400px;
-    height: 80px;
-    margin: 0 auto;
-    padding-top: 10px;
-    margin-top: 50px;
-  }
-  .current-user{
-    padding-top: 0%;
-    color: black;
-    font-weight: bold;
-    font-size: 1.2rem;
-  }
-  .post-create{
-    height: 47%;
-    width: 80%;
-    border: 2px solid white;
-    border-radius: 20px;
-  }
-  .post{
-    height: 47%;
-    width: 20%;
-    border-radius: 20px;
-    background-color: #0084ff;
-    border: 2px solid white;
-    color: white;
-  }
+.header {
+  background-color: #586dff;
+  color: white;
+  font-size: 28px;
+  padding: 15px;
+  width: 100%;
+  border-radius: 6px 6px 0 0;
+  margin-bottom: 20px;
+}
+.main{
+  padding-top: 100px;
+}
+.post-input {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 20px;
+  border: 2px solid #586dff;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.post-input textarea {
+  width: 99%;
+  height: 60px;
+  padding: 8px;
+  font-size: 14px;
+  resize: none;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.post-input button {
+  align-self: flex-end;
+  margin-top: 8px;
+  background-color: #586dff;
+  color: white;
+  border: none;
+  padding: 5px 12px;
+  font-size: 12px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.post-card {
+  border: 2px solid #586dff;
+  border-radius: 10px;
+  padding: 10px;
+  text-align: left;
+  margin-bottom: 10px;
+}
+
+.post-user {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.post-content {
+  font-size: 14px;
+  color: #333;
+}
+.btn{
+  align-self: flex-end;
+  margin-top: 8px;
+  background-color: #586dff;
+  color: white;
+  border: none;
+  padding: 5px 22px;
+  font-size: 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: 2px;
+
+}
