--- a/src/components/feedpage.css
+++ b/src/components/feedpage.css
@@ -4,19 +4,71 @@
   margin: auto auto;
   padding: 20px;
   max-width: 500px;
+  display: flex;
+  flex-direction: column;
   
 }
-
+.hamburger {
+  font-size: 24px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin-right: 10px;
+  color: #fff;
+}
+.sidebar {
+  position: absolute;
+  top: 75px;
+  left: 0;
+  width: 160px;
+  background-color: #486ff8;
+  color: white;
+  
+  height: 100%;
+  transform: translateX(-100%);
+  transition: transform 0.3s ease-in-out;
+  z-index: 1000;
+  border-top-right-radius: 10px;
+  position: fixed;
+}
+.header-logo{
+  margin-left: -440px;
+}
+.sidebar.show {
+  transform: translateX(0);
+}
+.feed{
+  background-color: darkblue;
+  font-weight: bold;
+}
+.sidebar-item {
+  padding: 12px;
+  cursor: pointer;
+  border-bottom: 1px solid #fff;
+  text-align: center;
+}
+.sidebar-item:hover{
+  background-color: darkblue;
+}
+.logo {
+  font-weight: bold;
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 20px;
+}
 .header {
   background-color: #586dff;
   color: white;
   font-size: 28px;
-  padding: 15px;
+  position: fixed;
   width: 100%;
   border-radius: 6px 6px 0 0;
   margin-bottom: 20px;
   margin-top: -10px;
-  
+  display: flex;
+  align-items: center;
+  padding-left:15px;
+  gap: 440px;
 }
 .main{
   padding-top: 20px;
@@ -60,6 +112,13 @@
   border-radius: 4px;
   cursor: pointer;
 }
+.sidebar-item.active-tab {
+  background-color: #314ac5;
+  font-weight: bold;
+  color: #fff;
+  transition: background-color 0.2s;
+  border-radius: 5px;
+}
 
 .post-card {
   background-color: #dde1f4;
@@ -81,8 +140,8 @@
   color: #333;
 }
 .post-image{
-  width: 430px;
-  height: 430px;
+  width: 400px;
+  height: 400px;
 }
 .btn{
   align-self: flex-end;
